Use Request.Form.File ..

--- a/SinjulMSBH_Upload_Web/SinjulMSBH_Upload_Web/Pages/_Layout.cshtml
+++ b/SinjulMSBH_Upload_Web/SinjulMSBH_Upload_Web/Pages/_Layout.cshtml
@@ -40,7 +40,8 @@
                                     <li><a asp-controller="Uploader" asp-action="Upload01">Sample01</a></li>
                                     <li><a asp-controller="Uploader" asp-action="Upload02">Sample02</a></li>
                                     <li><a asp-controller="Uploader" asp-action="Upload03">Sample03</a></li>
-                                    <li><a asp-controller="Uploader" asp-action="IFrame">Sample04</a></li>
+                                    <li><a asp-controller="Uploader" asp-action="Upload04">Sample04</a></li>
+                                    <li><a asp-controller="Uploader" asp-action="IFrame">Sample05</a></li>
                               </ul>
                         </li>
                   </ul>
